--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ionic-native": "^1.1.0",
     "ionicons": "3.0.0",
     "lodash": "^4.12.0",
+    "pouchdb": "^5.3.2",
     "rxjs": "5.0.0-beta.2"
   },
   "devDependencies": {
